src/test/ui/self/elision/ref-alias-async.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ref-alias-async.rs:20:50
   |
LL |     async fn ref_Alias(self: &Alias, f: &u32) -> &u32 {
   |                                                  ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-alias-async.rs:26:59
   |
LL |     async fn box_ref_Alias(self: Box<&Alias>, f: &u32) -> &u32 {
   |                                                           ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-alias-async.rs:32:59
   |
LL |     async fn pin_ref_Alias(self: Pin<&Alias>, f: &u32) -> &u32 {
   |                                                           ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-alias-async.rs:38:68
   |
LL |     async fn box_box_ref_Alias(self: Box<Box<&Alias>>, f: &u32) -> &u32 {
   |                                                                    ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-alias-async.rs:44:68
   |
LL |     async fn box_pin_ref_Alias(self: Box<Pin<&Alias>>, f: &u32) -> &u32 {
   |                                                                    ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0106`.
